--- a/build.settings
+++ b/build.settings
@@ -26,23 +26,23 @@ settings = {
 			--UIApplicationExitsOnSuspend = true,  -- Uncomment to quit app on suspend    
 			CFBundleIconFiles =
 			{
-				"Icon.png", 
-				"Icon@2x.png", 
-				"Icon-60.png",
-				"Icon-60@2x.png",
-				"Icon-60@3x.png",
-				"Icon-72.png", 
-				"Icon-72@2x.png",
-				"Icon-76.png",
-				"Icon-76@2x.png",
-				"Icon-167.png",
-				"Icon-Small.png", 
-				"Icon-Small@2x.png",
-				"Icon-Small@3x.png",
-				"Icon-Small-40.png",
-				"Icon-Small-40@2x.png",
-				"Icon-Small-50.png", 
-				"Icon-Small-50@2x.png",
+				"icon/Icon.png", 
+				"icon/Icon@2x.png", 
+				"icon/Icon-60.png",
+				"icon/Icon-60@2x.png",
+				"icon/Icon-60@3x.png",
+				"icon/Icon-72.png", 
+				"icon/Icon-72@2x.png",
+				"icon/Icon-76.png",
+				"icon/Icon-76@2x.png",
+				"icon/Icon-167.png",
+				"icon/Icon-Small.png", 
+				"icon/Icon-Small@2x.png",
+				"icon/Icon-Small@3x.png",
+				"icon/Icon-Small-40.png",
+				"icon/Icon-Small-40@2x.png",
+				"icon/Icon-Small-50.png", 
+				"icon/Icon-Small-50@2x.png",
 			},
 		},
 	},
