--- a/build.settings
+++ b/build.settings
@@ -17,7 +17,7 @@ settings = {
 		usesPermissions =
 		{
 			"android.permission.INTERNET",
---      "android.permission.VIBRATE"
+      "android.permission.VIBRATE"
 		},
 	},
     
