changed mac window text

--- a/build.settings
+++ b/build.settings
@@ -59,8 +59,10 @@ settings = {
 		titleText = {
 			-- The "default" text will be used if the system is using a language and/or
 			-- country code not defined. This serves as a fallback mechanism.
-			default = "Skeleton",
-		},
+			default = "The Dirty Moogs — Back to Bits",
+      suspendWhenMinimized = true,
+    },
+
 	},
 
 	plugins =
